# cmake_test

./: .gitignore  CMakeLists.txt
cmake_additional/: cxx_flag_overrides.cmake  external_projects.cmake
projects/project_main/: CMakeLists.txt
projects/project_main/include/: main_project.hpp
projects/project_main/src/: main_project.cpp
projects/some_engine/: CMakeLists.txt
projects/some_engine/include/: some_engine.hpp
projects/some_engine/src/: some_engine.cpp
